# folderSort

./: .gitignore  README.md  index.html
assets/: index-D5TcfuG4.js
backend/: README.md  pyproject.toml
backend/folder_cleaner/: cli.py  client.py
backend/folder_cleaner/core/: alphabetical_sorter.py  base_sorter.py  chronological_order.py
backend/folder_cleaner/organizer_graph/: graph.py  prompt.py  state.py
backend/folder_cleaner/organizer_graph/schemas/: directory_summary.py  sorting_algorithm.py
frontend/folderSortPage/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/folderSortPage/docs/: roadmap.md
frontend/folderSortPage/src/: main.tsx
frontend/folderSortPage/src/components/ui/: terminalBox.tsx
frontend/pycleanerpage/src/: main.tsx
frontend/pycleanerpage/src/components/ui/: ProductPageComponent.tsx  provider.tsx  useTypeWriter.ts
